@@ -46,8 +46,13 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         
         // 프론트엔드 URL 허용
-        configuration.setAllowedOrigins(List.of(frontUrl));
-        
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000",            // 로컬 개발용
+                "https://idol-kalendar.shop",       // 도메인
+                "https://web-7-9-wy-fe.vercel.app/",  // Vercel 배포 주소
+                frontUrl                            // 기존 설정 파일 값도 포함
+        ));
+
         // 허용할 HTTP 메서드
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         
@@ -114,6 +119,7 @@ public class SecurityConfig {
                                 "/swagger-ui/**",                  // Swagger UI
                                 "/v3/api-docs/**",                 // OpenAPI 문서
                                 "/swagger-resources/**",            // Swagger 리소스
+                                "/api/v1/notifications/**",          // 알림
                                 "/api/v1/performance-seats/**",
                                 "/api/v1/queue/**",
                                 "/ws-chat/**"                      // WebSocket 연결 허용
